@@ -106,3 +106,4 @@ Current
 	- Protocols: InspIRCd renamed to InspIRCd12, support for InspIRCd20 will be added soon.
 	- API: added event_stopic for topic bursts
 	- Protocols: Added raw_motd and raw_admin
+	- Modules: Added chanserv/op
